--- a/HTML.html
+++ b/HTML.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1><a href="index.html">WEB - HTML</a></h1>
+  <h1><a href="index.html">WEB</a></h1>
   <div id="grid">
     <ol>
       <li><a href="HTML.html" class="saw" id="active">HTML</a></li>
